# ai-assistant

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
docs/: INTENT_MANAGER.md  MEMORY.md  MVP.md  PLAN.md  REMINDERS.md  WEB_SEARCH.md
infra/caddy/: Caddyfile
n8n/workflows/: README.md
services/assistant/: Dockerfile  pyproject.toml
services/assistant/app/: main.py
services/assistant/app/agents/: intent_manager.py  intent_router.py
services/assistant/app/api/: n8n.py  oauth.py  telegram.py
services/assistant/app/core/: settings.py
services/assistant/app/db/: models.py  session.py
services/assistant/app/integrations/: google_calendar.py  n8n.py  telegram.py
services/assistant/app/scheduler/: reminders.py
services/assistant/app/services/: assistant.py  conversation_context.py  intent_definitions.py  intent_state.py  reference_resolver.py  reminders.py  schemas.py  user_state.py  web_search.py  web_tasks.py
services/assistant/tests/: test_conversation_context.py  test_intent_manager.py  test_location_command.py  test_reference_resolver.py  test_thread_intents.py  test_web_search.py
skills/project-doc-sync/: SKILL.md
skills/project-doc-sync/agents/: openai.yaml
skills/project-review/: SKILL.md
skills/project-review/agents/: openai.yaml
