[project]
name = "assistant-service"
version = "0.1.0"
description = "Telegram AI assistant backend"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "dateparser>=1.2.0",
  "fastapi>=0.115.0",
  "google-api-python-client>=2.130.0",
  "google-auth>=2.30.0",
  "google-auth-oauthlib>=1.2.0",
  "httpx>=0.27.0",
  "openai>=1.90.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy[asyncio]>=2.0.30",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
